[package]
name = "how-install"
version = "1.0.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jam1garner/how-install"
description = "A CLI for helping find how to install a given command."

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
displaydoc = "0.2.3"
nix = { version = "0.24.1", default-features = false, features = ["user"] }
owo-colors = "3.4.0"
reqwest = { version = "0.11.10", features = ["rustls-tls"] }
scraper = "0.13.0"
sys-info = "0.9.1"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }

how-install-tealdeer = { version = "1.5.0" }
dialoguer = "0.10.1"
atty = "0.2.14"
